Fix z-index positioning of pop-ups in Admin

--- a/src/react-components/User/Topbar/styles.css
+++ b/src/react-components/User/Topbar/styles.css
@@ -1,4 +1,5 @@
 #appbar {
+    z-index: 1;
     box-shadow: none;
     position: fixed;
 }
